[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Dinh Nguyen Le <nguyenld.work@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
langchain = "^0.2.16"
langgraph = "^0.2.19"
chromadb = "^0.5.5"
transformers = "^4.44.2"
torch = "^2.4.1"
sentence-transformers = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
